force-app/main/default/objects/Customer_Success_Risk__c/Customer_Success_Risk__c.object-meta.xml
<CustomObject>
    <label>Customer Success Risk</label>
    <pluralLabel>Customer Success Risks</pluralLabel>
    <nameField>
        <displayFormat>CSR-{00000000}</displayFormat>
        <label>Risk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>