force-app/main/default/objects/Customer_Success_Risk__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Customer Success Risks (Raised By)</relationshipLabel>
    <relationshipName>Raised_Customer_Success_Risks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>