force-app/main/default/objects/Customer_Success_Risk__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>