force-app/main/default/objects/Customer_Success_Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Risk</fullName>
                <default>true</default>
                <label>Adoption Risk</label>
            </value>
            <value>
                <fullName>Commercial Risk</fullName>
            </value>
            <value>
                <fullName>Support Risk</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor Change</fullName>
            </value>
            <value>
                <fullName>Competitive Threat</fullName>
            </value>
            <value>
                <fullName>Budget Risk</fullName>
            </value>
            <value>
                <fullName>Renewal Risk</fullName>
            </value>
            <value>
                <fullName>Partner Relationship Risk</fullName>
            </value>
            <value>
                <fullName>Product Fit Risk</fullName>
            </value>
            <value>
                <fullName>Contract Compliance Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>